--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "@vueuse/core": "^14.1.0",
     "axios": "^1.13.2",
     "element-plus": "^2.11.5",
     "pinia": "^3.0.3",
